--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -9,7 +9,7 @@
   
   body {
     font-family: "Nanum Myeongjo", "Georgia", serif;
-    background-color: hsla(340,59.8%,84.9%);
+    background-color: aliceblue;
   }
   
   p, 
@@ -32,9 +32,9 @@
     display: flex;
     justify-content: space-between;
     align-items: baseline;
-    border-bottom: 2px solid palevioletred;
+    border-bottom: 2px solid steelblue;
     z-index: 10;
-    background-color: peachpuff;
+    background-color: lightcyan;
   }
 
   header h1 {
@@ -53,14 +53,14 @@
 
   nav li a{
     padding: 5px 20px;   
-    border: 1px solid darksalmon;
+    border: 1px solid steelblue;
     border-radius: 6px;
     transition: all 800ms ease 100ms;
-    color: sienna;
+    color: indigo;
   }
 
   nav li a:hover {
-    background-color: indianred;
+    background-color: steelblue;
     color: whitesmoke;
   }
 
@@ -69,9 +69,9 @@
   main {
     position: relative;
     top: 100px;
-    background-image: url(../images/magentabackground.png);
-    height: 600px;
-    width: 1200px;
+    /*background-image: url(../images/bluebackground.png);
+    height: 600px;*/
+    width: 80%;
     margin: 0 auto;
   }
 
@@ -86,12 +86,52 @@
     text-transform: uppercase;
   }
 
+  .gallery-block {
+    display: inline-block;
+    font-family: "Manrope", Helvetica, Arial, sans-serif;
+    margin-left: 3%;
+    margin-right: 3%;
+    margin-bottom: 6%;
+    width: 40%;
+
+    text-align: center;
+    /* border: 1px solid slategray;
+    background-color: ghostwhite; */
+    transition: all 600ms ease 100ms;
+  }
+
+  .gallery-icon {
+    width: 100%;
+  }
+
+  #galleries {
+    padding-left: 4%; 
+
+  }
+
+  #galleries a {
+    width: 100%;
+    height: 100%;
+    /* padding-top: 8%;
+    padding-bottom: 8%; */
+  }
+
+  #galleries li:hover {
+    background-color: lightslategray;
+    color: whitesmoke;
+    opacity: .8;
+  }
+
+  #galleries {
+    margin-bottom: 5%;
+  }
+
   #contact {
-    padding-left: 40px;
+    padding-left: 5%;
   }
 
   #contact h3 {
-    margin-bottom: 10px;
+    margin-bottom: 3%;
   }
 
   #contact a {
@@ -104,7 +144,7 @@
     font-family: "Manrope", Helvetica, Arial, sans-serif;
     margin-left: 30px;
     border: 1px solid slategray;
-    background-color: transparent;
+    background-color: rgba(224,255,255,0.5);
     transition: all 600ms ease 100ms;
   }
 
@@ -119,13 +159,16 @@
   footer {
     position: relative;
     top: 100px;
-    border-top: 2px solid hsl(0, 61.7%, 77.5%);
+    border-top: 2px solid lightcyan;
   }
 
   footer h5 {
-    padding-top: 10px;
-    padding-left: 20px;
-    color: hsla(340,39.8%,44.9%);
+    margin-left: 10%;
+    padding-top: 1%;
+    padding-left: 2%;
+    margin-top: 5%;
+    margin-bottom: 10%;
+    color: indigo;
   }
   
   
