--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -10,11 +10,12 @@
   body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     background-color: white;
+    color: indigo;
   }
   
   p, 
   li {
-    font-size: 18px;
+    font-size: medium;
   }
   
   a {
@@ -35,14 +36,6 @@
     border-bottom: 2px solid steelblue;
     z-index: 10;
     background-color: aliceblue;
-  }
-
-  header h1 {
-    color: indigo;
-  }
-
-  header h3 {
-    color: indigo;
   }
 
   #nameplate {
@@ -66,7 +59,6 @@
     border: 1px solid steelblue;
     border-radius: 6px;
     transition: all 800ms ease 100ms;
-    color: indigo;
   }
 
   nav li a:hover {
@@ -136,32 +128,91 @@
     margin-bottom: 5%;
   }
 
-  #contact {
+  .bio {
+    padding-top: 5%;
+    display: flex;
+    justify-items: space-between;
+  }
+
+  .bio img {
+    height: 100%;
+  }
+
+  .bio section {
+    padding: 5%;
+  }
+
+  .bio h1 {
+    font-size: xx-large;
+  }
+
+  .contact-page h2 {
+    margin-left: 5%;
+    padding: 5% 0;
+  }
+
+  .contact-page form {
+    margin: 0% 10%;
+  }
+
+  .contact-text {
+    padding: 0 1%;
+    margin-bottom: 5%;
+    width: 20%;
+    border-radius: 6px;
+  }
+
+  .contact-page textarea {
+    width: 60%;
+    padding: 1%;
+    border-radius: 6px;
+  }
+
+  #submit {
+    margin: 3% 0;
+    padding: 1% 2%;
+    border: 1px solid steelblue;
+    border-radius: 6px;
+    transition: all 800ms ease 100ms;
+    background-color: aliceblue;
+    font: inherit;
+    color: inherit;
+    font-size: smaller;
+  }
+
+  #submit:hover {
+    background-color: steelblue;
+    color: whitesmoke;
+  }
+
+  /* CONTACT BANNER */
+
+  #contact-banner {
     padding-left: 5%;
     margin-bottom: 3%;
   }
 
-  #contact h3 {
-    color: indigo;
+  #contact-banner h3 {
     margin-bottom: 1%;
   }
 
-  #contact a {
+  #contact-banner a {
     display: block;
-    padding: 10px 15px;
+    margin: 10px 15px;  
   }
 
-  #contact li {
+  #contact-banner li {
     display: inline-block;
     font-size: xx-large;
     margin-left: 5%;
-    color: indigo;
+  }
+
+  #contact-banner i {
     transition: all 600ms ease 100ms;
   }
 
-  #contact li:hover {
+  #contact-banner i:hover {
     color: cornflowerblue;
-    opacity: .8;
   }
 
   /* FOOTER */
